modified:   _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-cayman
 title: Korean Singing Voice Synthesis based on Auto-Regressive Boundary Equilibrium GAN
 
 github:
-  another_url: https://github.com/SoonbeomChoi/Saebyul-GAN
+  repository_url: https://github.com/SoonbeomChoi/Saebyul-GAN
