modified:   _config.yml 	new file:   _layouts/default.html

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-cayman
 title: Korean Singing Voice Synthesis based on Auto-Regressive Boundary Equilibrium GAN
+tagline: Music and Audio Computing Lab, GSCT, KAIST
 
 github:
   repository_url: https://github.com/SoonbeomChoi/Saebyul-GAN
