modified:   _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Korean Singing Voice Synthesis based on Auto-Regressive Boundary Equilibrium GAN
+title: Cayman Theme
 description: Music and Audio Computing Lab, GSCT, KAIST
 
 theme: jekyll-theme-cayman
