modified:   _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Korean Singing Voice Synthesis based on Auto-Regressive Boundary Equilibrium GAN
-description: Music and Audio Computing Lab, GSCT, KAIST
+description: Music and Audio Computing Lab, KAIST
 
 theme: jekyll-theme-cayman
 
